# iap_sdk

./: .gitignore  COMPATIBILITY.md  LICENSE  README.md  RELEASE.md  RELEASE_NOTES_TEMPLATE.md  pyproject.toml  requirements-runtime.txt
.github/workflows/: ci.yml  release.yml  security-audit.yml
docs/: e2e-dev-local-walkthrough.md  e2e-user-walkthrough.md  final-live-test.md  lnbits-vs-stripe-flow.md  local-amcs-privacy-model.md  migration-cli-first.md  operator-runbook-payments.md  quickstart-first-certificate.md  security-assumptions.md  transition-terminology.md  troubleshooting.md  upgrade-guide.md
examples/state-drift-demo/: README.md  demo.py
scripts/: append_agent_files_to_amcs.py  final_live_test.py  smoke_install.sh  validate_doc_commands.py
src/iap_sdk/: __init__.py  amcs_adapter.py  client.py  custody.py  errors.py  liveness.py  manifest.py  offline_verify.py  requests.py  transparency.py  transparency_core.py  types.py  verify.py
src/iap_sdk/certificates/: __init__.py  schemas.py
src/iap_sdk/cli/: __init__.py  amcs.py  config.py  identity.py  main.py  sessions.py  tracking.py
src/iap_sdk/continuity/: __init__.py  signing.py
src/iap_sdk/crypto/: __init__.py  agent_identity.py  ed25519_verify.py
tests/: test_cli_amcs.py  test_cli_anchor.py  test_cli_config.py  test_cli_continuity.py  test_cli_errors.py  test_cli_flow.py  test_cli_identity.py  test_cli_main.py  test_cli_pay.py  test_cli_transition.py  test_cli_verify.py  test_cli_wait_cert.py  test_doc_command_validation.py  test_offline_verify.py  test_packaging_hardening.py  test_sdk_client.py  test_sdk_compat.py  test_sdk_liveness.py  test_sdk_manifest.py  test_sdk_requests.py  test_sdk_verify.py  test_spec_vectors.py  test_state_drift_demo.py
tests/spec_vectors/: 001_valid_identity_anchor.json  002_valid_continuity_with_anchor.json  003_invalid_signature_tampered_continuity.json  004_invalid_agent_id_derivation.json  005_invalid_protocol_version_schema_error.json
