[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iap-sdk"
version = "0.1.0"
description = "Identity Anchor Protocol SDK for signing requests and offline certificate verification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "cryptography>=42",
  "pydantic>=2.7",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
iap-agent = "iap_sdk.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["iap_sdk*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
