[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iap-agent"
version = "0.1.2"
description = "Identity Anchor Protocol SDK for signing requests and offline certificate verification"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Identity Anchor Protocol"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["iap", "identity", "continuity", "ed25519", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography>=42",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/identity-anchor-protocol/iap_sdk"
Repository = "https://github.com/identity-anchor-protocol/iap_sdk"
Issues = "https://github.com/identity-anchor-protocol/iap_sdk/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "build>=1.2",
  "twine>=5.0",
]

[project.scripts]
iap-agent = "iap_sdk.cli.main:main"
iap = "iap_sdk.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["iap_sdk*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
